next/styles/main.css
html,
body {
  padding: 0;
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
    Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  line-height: 1.6;
  font-size: 18px;
}

* {
  box-sizing: border-box;
}

/* Scope legacy element styles to non-parvagues pages */
body:not(:has(.parvagues-root)) a {
  color: #0070f3;
  text-decoration: none;
}

body:not(:has(.parvagues-root)) a:hover {
  text-decoration: underline;
}

img {
  max-width: 100%;
  display: block;
}

body:not(:has(.parvagues-root)) header {
  margin-bottom: 2em;
}

body:not(:has(.parvagues-root)) main h2 {
  margin-bottom: 1em;
}

h4 {
  font-size: 1.2rem;
}

ul.links {
  margin-bottom: 3em;
}

p.code {
  font-family: monospace;
}

body:not(:has(.parvagues-root)) section {
  margin-bottom: 3em;
}

small {
  font-size: 1rem;
}

body:not(:has(.parvagues-root)) footer {
  margin-top: 4em;
  text-align: center;
  color: #228;
}

h1 a, h2 a, h3 a, h4 a, h5 a {
  text-decoration: underline;
}

.source-code {
  max-height: 36em;
}


.player-wrapper {
  padding: 12em 0;
  position: relative;
  padding-top: 56.25% /* Player ratio: 100 / (1280 / 720) */
}

.react-player {
  position: absolute;
  top: 0;
  left: 0;
}

.description {
  font-size: 1.2rem;
  line-height: 2.5;
}

.divider {
  margin: 1.5em 0 0.75em 0;
  height: 1px;
  background-color: #e0e0e0;
}

